V-6 (feat): Реализовано чтение таблицы из БД по UUID
